---
config:
  layout: elk
---
classDiagram
    direction TB

    %% Source: Context #5 (cache.py file details)
    namespace cache {
        class FileData {
            <<NamedTuple>>
        }
        class Cache {
            <<dataclass>>
        }
        class get_cache_dir {
            <<Function>>
        }
        class get_cache_file {
            <<Function>>
        }
    }

    %% Relationships grounded in context (Cache uses FileData, depends on helper functions)
    Cache --> FileData : uses
    Cache ..> get_cache_file : depends on
    Cache ..> get_cache_dir : depends on